--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dang-thats-delicious",
+  "name": "trustyfit",
   "version": "0.0.0",
   "private": true,
   "engines": {
     "node": ">= 7.6.0"
   },
   "scripts": {
-    "start": "node ./start.js",
+    "prod": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
-    "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
     "sample": "node ./data/load-sample-data.js",
     "blowitallaway": "node ./data/load-sample-data.js --delete",
