--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "3.1.2",
     "faker": "4.1.0",
     "forever": "0.15.3",
+    "geoip-lite": "^1.3.8",
     "geolocation": "^0.2.0",
     "glob": "7.1.1",
     "html-to-text": "3.2.0",
